# daf

./: .gitignore  .gitmodules  DaF.code-workspace  README.md  build_all.sh  commit_all.sh
Demos/AnimationDemo/: AnimationDemo.mdproj  AnimationDemo.pidb  meson.build
Demos/AnimationDemo/src/: Main.vala  meson.build
Demos/AnimationDemo/src/View/: .AnimatedDeckLayoutDemo.vala.swp  AdaptOpacityDemo.vala  AnimatedButtonsView.vala  AnimatedDeckLayoutDemo.vala  DeckLayoutDemo.vala  SimpleOpacityDemo.vala
Demos/ContactsDemo/: ContactsDemo.mdproj  ContactsDemo.pidb
Demos/ContactsDemo/src/: ApplicationController.vala  Bootstrapper.vala  Main.vala  meson.build
Demos/ContactsDemo/src.old/DataAccess/: IContactsRepository.vala
Demos/ContactsDemo/src.old/Model/: ContactsService.vala  Person.vala
Demos/ContactsDemo/src.old/View/: ContactTreeModelAdapter.vala  SelectionInListView.vala
Demos/ContactsDemo/src/DataAccess/: .#IPersonRepository.vala  DefaultPersonRepository.vala  FilePersonRepository.vala  IContactsRepository.vala  SqlitePersonRepository.vala
Demos/ContactsDemo/src/Model/: Address.vala  ContactManagerModel.vala  Gender.vala  IContactsService.vala  Person.vala  PersonValidator.vala
Demos/ContactsDemo/src/View/: ContactManagerView.ui  ContactManagerView.vala  IView.vala  MainWiew.vala  MainWindow.ui~  PersonEditorView.ui  PersonEditorView.vala
Demos/ContactsDemo/src/ViewModel/: ContactManagerPresentation.vala  ContactTreeModelAdapter.vala  PersonEditorPresentation.vala
Demos/NewsDemo/: .buildconfig  COPYING  README.md  meson.build  org.gnome.NewsDemo.json
Demos/NewsDemo/data/: Application.gresource.xml  app.gresource.xml  com.github.ilap.daf.demos.news.appdata.xml  com.github.ilap.daf.demos.news.appdata.xml.in  com.github.ilap.daf.demos.news.desktop  com.github.ilap.daf.demos.news.desktop.in  com.github.ilap.daf.demos.news.gresource.xml  com.github.ilap.daf.demos.news.gschema.xml  meson.build
Demos/NewsDemo/data/css/: Application.css  style.css
Demos/NewsDemo/debian/: changelog  control  copyright  rules
Demos/NewsDemo/po/: LINGUAS  POTFILES  com.github.ilap.daf.demos.news.pot  hu_HU.po  meson.build
Demos/NewsDemo/src/: NewsDemo.vala  meson.build
Demos/NewsDemo/src/Views/: SplashView.vala
Demos/NewsDemo/src/configs/: Constants.vala
Demos/NewsDemo/src/views/: AppView.vala
Demos/SelectionInListDemo/: SelectionInListDemo.mdproj  SelectionInListDemo.pidb  SelectionInListDemo.vala.pidb  meson.build
Demos/SelectionInListDemo/src/: Application.vala  Main.vala  meson.build
Demos/SelectionInListDemo/src/DataAccess/: DefaultPersonRepository.vala  IContactsRepository.vala
Demos/SelectionInListDemo/src/Model/: ContactManagerModel.vala  IContactsService.vala
Demos/SelectionInListDemo/src/ViewModel/: ContactManagerPresentation.vala
Demos/SelectionInListDemo/subprojects/: dafcore  dafui  dafvalidation
Demos/VideoConverter/: VideoConverter.mdproj  VideoConverter.pidb
Demos/VideoConverter/data/: meson.build
Demos/VideoConverter/src/: Main.vala  meson.build
Demos/VideoConverter/src/View/: VideoConverterView.vala
Demos/VideoConverter/subprojects/: dafioc  dafunit
scripts/: build_all.sh  commit_all.sh  generate_meson_sources.sh
