sources = files (
    'DataAccess/FilePersonRepository.vala',
    'DataAccess/IContactsRepository.vala',
    'DataAccess/SqlitePersonRepository.vala',
    'DataAccess/DefaultPersonRepository.vala',
    'Model/PersonValidator.vala',
    'Model/ContactManagerModel.vala',
    'Model/IContactsService.vala',
    'Model/Person.vala',
    'Model/Address.vala',
    'Model/Gender.vala',
    'Main.vala',
    'View/IView.vala',
    'View/ContactManagerView.vala',
    'View/MainWiew.vala',
    'View/PersonEditorView.vala',
    'Bootstrapper.vala',
    'ViewModel/ContactTreeModelAdapter.vala',
    'ViewModel/ContactManagerPresentation.vala',
    'ViewModel/PersonEditorPresentation.vala',
    'ApplicationController.vala',
)
