sources = files (
    'Application.vala',
    'DataAccess/DefaultPersonRepository.vala',
    'DataAccess/IContactsRepository.vala',
    'Main.vala',
    'Model/ContactManagerModel.vala',
    'Model/ContactsService.vala',
    'Model/IContactsService.vala',
    'Model/Person.vala',
    'View/ContactTreeModelAdapter.vala',
    'View/SelectionInListView.vala',
    'ViewModel/ContactManagerPresentation.vala',
)
