#image_names = ['angel', 'angry']
#
#image_conf = configuration_data()
#foreach image: image_names
#    configure_file(
#    input: 'images/' + meson.project_name() + '.' + image + '.png',
#    output: meson.project_name() + '.' + image + '.png', 
#    configuration: conf,
##    copy: true,
#    install: false
#    )
#endforeach

#install_data(
#    join_paths('images', meson.project_name() + '.angel.png'),
#    join_paths('images', meson.project_name() + '.angry.png'),
#    install_dir: join_paths(get_option('datadir'), 'pixmaps')
#)
